# GameOfLife-CL

./: LICENSE  README.md  conway-cl.cabal  stack.yaml
kernels/: gol.cl
src/: Compute.hs  Graphics.hs  Main.hs  Simulation.hs
