name:                conway-cl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lignum/GameOfLife-CL
license:             MIT
license-file:        LICENSE
author:              Lignum
maintainer:          me@lignum.pw
copyright:           2017 Lignum
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable conway-cl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Compute
                     , Graphics
                     , Simulation
  build-depends:       base >= 4.7 && < 5
                     , OpenCL >= 1.0.3
                     , mtl >= 2.2.1
                     , sdl2
                     , vector >= 0.12
                     , random >= 1.1